src/test/ui/proc-macro/invalid-punct-ident-2.stderr
error: proc macro panicked
  --> $DIR/invalid-punct-ident-2.rs:19:1
   |
LL | invalid_ident!();
   | ^^^^^^^^^^^^^^^^
   |
   = help: message: `"*"` is not a valid identifier

error: aborting due to previous error

