src/test/ui/proc-macro/invalid-punct-ident-2.rs
// aux-build:invalid-punct-ident.rs

#[macro_use]
extern crate invalid_punct_ident;

invalid_ident!(); //~ ERROR proc macro panicked
